correct overlapping bug on contact me h1

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -323,6 +323,10 @@ h3 {
 /*--------------------------------------------------------------
 # My Projects - Third Section
 --------------------------------------------------------------*/
+.portfolio {
+  height: auto;
+}
+
 .projects-description {
   color: #6c6c6d;
   text-align: center;
@@ -373,12 +377,13 @@ h3 {
   align-content: space-evenly;
   grid-row-gap: 2em;
   grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr 1fr;
-  grid-template-areas: ". . ."". . ."". . .";
+  grid-template-rows: 1fr 1fr;
+  grid-template-areas: ". . ."". . .";
   margin-top: 50px;
   min-width: 80%;
   margin: 50px auto;
   height: 100%;
+
 }
 
 .img-wrapper img {
